--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-fontawesome": "^1.6.1"
+    "react-fontawesome": "^1.6.1",
+    "simplebar-react": "^1.0.0-alpha.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
