--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "jest": {
     "setupFiles": [
       "./setupTests.js"
+    ],
+    "collectCoverage": true,
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/pages/"
     ]
   },
   "repository": {
@@ -44,6 +49,7 @@
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0",
     "eslint": "^5.16.0",
